# rust-uploader

./: .env.example  .gitignore  CLAUDE.md  Cargo.toml  Makefile  commands.md  docker-compose.yml  v1.md
db/: init.sh
diagrams/: system.excalidraw
docs/: code-walkthrough.md  postgres-plan.md  project-plan.md  roadmap.md
infra/: s3-bucket-policy.json
migrations/: 0001_create_video_tables.sql  0002_add_processed_key.sql  0003_add_tags_column.sql  0004_add_views_column.sql  0005_add_thumbnail_url.sql  0006_add_resources_table.sql  0007_add_resource_content_table.sql  0008_add_resources_types_table.sql  0009_seed_resource_types.sql
src/: main.rs  routes.rs  s3.rs
src/entities/: mod.rs  video.rs
src/entities/resource_contents/: mod.rs  model.rs  queries.rs
src/entities/resource_types/: mod.rs  model.rs  queries.rs
src/entities/resources/: mod.rs  model.rs  queries.rs
src/entities/video/: mod.rs  model.rs  queries.rs
src/extractor/: decode.rs
src/extractors/: html.rs  mod.rs  pdf.rs  video.rs
src/ffmpeg/: mod.rs
src/handlers/: mod.rs  upload.rs  video.rs
src/handlers/resources/: create_resource_handler.rs  list_resource_types.rs  mod.rs  search_resources.rs
src/handlers/videos/: handler.rs  mod.rs  response.rs  upload.rs
src/http/: extractor.rs  mod.rs  responses.rs  routes.rs
src/snippets/: impl_keyword.rs
src/utils/: constants.rs  mod.rs
src/web/: package-lock.json  package.json
src/web/src/: App.tsx
src/web/src/@types/: index.ts
src/web/src/api/: client.ts
src/web/src/components/: ContentCard.tsx
src/web/src/hooks/: feed.tsx  (+2 more)
(+7 files in other folders)
