[package]
name = "mini-tube"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.8", features = ["multipart", "macros"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.49.0", features = ["full"] }
aws-sdk-s3 = "1"
aws-config = { version = "1", features = ["behavior-version-latest"] }
dotenvy = "0.15"
uuid = {version = "1", features = ["v4", "serde"] }
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio", "uuid", "migrate", "chrono"] }
tower-http = { version = "0.6", features = ["cors"] }
chrono = { version = "0.4" }
reqwest = { version = "0.12", features = ["json"] }
scraper = "0.22"
